Fixed inconsistent synchronization and potential null pointer dereference